# market-predict

./: .gitignore  LICENSE  README.md  docker-compose.yml  inputs.example.json  schema.sql  watchlist.current5.json  watchlist.id.example.json
app/: README.md  feeds_health.json  pyproject.toml  scraping_flow-deployment.yaml
app/models/: BBCA.JK_lgbm.pkl  BMRI.JK_lgbm.pkl  ORCL_lgbm.pkl  TOWR.JK_lgbm.pkl  UBER_lgbm.pkl
app/output/: memo_BBCA.JK_Q4-2025.md  memo_BMRI.JK_Q4-2025.md  memo_NFLX_Q4-2025.md  memo_ORCL_Q4-2025.md  memo_TOWR.JK_Q4-2025.md  memo_UBER_Q4-2025.md  memo_gap_analysis.json  memo_quality_report.json
app/src/: __init__.py  config.py  db.py  main.py  storage.py
app/src/analysis/: __init__.py  coverage_contracts.py  currency_utils.py  factor_model.py  financial_scoring.py  model_predictor.py  model_trainer.py  news_sentiment.py  sector_questions.py  sector_scoring.py  technical_analysis.py  thesis_tracker.py  valuation.py
app/src/collectors/: __init__.py  base.py  company_reports.py  feed_health.py  indonesia_fundamentals.py  news_rss.py  sec_edgar.py  yfinance_fundamentals.py
app/src/market/: __init__.py  price_fetcher.py
app/src/parsers/: __init__.py  html_parser.py  metric_mapper.py  pdf_parser.py  period_detector.py
app/src/pipelines/: __init__.py  audit.py  prefect_flow.py
app/src/summary/: __init__.py  generator.py  memo_generator.py
migrations/: 20260221_id_fundamentals_p0_p2.sql
tests/: test_pipeline_integrity.py
